@@ -25,6 +25,7 @@ public:
     server(const server_parameters &cfg);
 
     void run();
+    void stop();
     void gracefully_stop();
 
 private:
